--- a/src/index.scss
+++ b/src/index.scss
@@ -3,4 +3,12 @@ body {
 	font-family: "Lato", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+
+	--color-0: #525252;
+	--color-1: #414141;
+	--color-2: #313131;
+	--color-3: #ca3e47;
+
+	color: lightgray;
+	letter-spacing: 0.5px;
 }
