--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,10 @@
+@use "./vars.scss";
+
 body {
 	margin: 0;
 	font-family: "Lato", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-
-	--color-0: #525252;
-	--color-1: #414141;
-	--color-2: #313131;
-	--color-3: #ca3e47;
 
 	color: lightgray;
 	letter-spacing: 0.5px;
