--- a/src/components/GameStats/GameStats.scss
+++ b/src/components/GameStats/GameStats.scss
@@ -1,20 +1,38 @@
+@import "../../vars.scss";
+
 .game-stats {
 	display: flex;
 	width: 100%;
-	height: 5vh;
+	height: 10vh;
+
 	.game-stats--single {
 		flex: 1;
 		display: flex;
-		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+
+		margin-right: 8px;
+		border-radius: 8px;
+
 		cursor: default;
 
+		box-shadow: 2px 2px 8px $shadow-dark inset, -2px -2px 8px $shadow-light inset;
+		color: gray;
+
 		.stats--number {
-			font-size: 15px;
+			font-size: 1rem;
 		}
 		.stats--icon {
-			font-size: 25px;
+			font-size: 1.5rem;
+			margin-right: 10px;
 		}
+	}
+
+	.game-stats--single.cta {
+		cursor: pointer;
+	}
+
+	.game-stats--single:last-child {
+		margin-right: 0;
 	}
 }
