--- a/src/widgets/GameBoard/GameBoard.scss
+++ b/src/widgets/GameBoard/GameBoard.scss
@@ -6,19 +6,25 @@
 	align-items: center;
 
 	flex-direction: column;
+	overflow-x: hidden;
+
 	.stats {
 		width: 700px;
 	}
 	.board {
-		flex: 1;
 		display: flex;
 		flex-direction: column;
-		width: 700px;
+
 		margin: 16px 0;
+		padding: 16px 128px;
+
+		overflow-x: hidden;
+		overflow-y: scroll;
+
 		.board-row {
 			flex: 1;
 			display: flex;
-			margin-bottom: 8px;
+			margin-bottom: 16px;
 		}
 		.board-row:last-child {
 			margin-bottom: 0;
@@ -34,7 +40,7 @@
 @media only screen and (min-width: 320px) {
 	.game-board .stats,
 	.game-board .board {
-		width: 80vw;
+		width: 95vw;
 	}
 }
 
@@ -42,7 +48,7 @@
 @media only screen and (min-width: 480px) {
 	.game-board .stats,
 	.game-board .board {
-		width: 80vw;
+		width: 95vw;
 	}
 }
 
