--- a/src/components/GameStats/GameStats.scss
+++ b/src/components/GameStats/GameStats.scss
@@ -45,3 +45,27 @@
 		margin-right: 0;
 	}
 }
+
+/* Custom, iPhone Retina */
+@media only screen and (min-width: 320px) {
+	.game-stats .game-stats--single {
+		.stats--number {
+			font-size: 1em;
+		}
+		.stats--icon {
+			font-size: 1.2em;
+		}
+	}
+}
+
+/* Small Devices, Tablets */
+@media only screen and (min-width: 768px) {
+	.game-stats .game-stats--single {
+		.stats--number {
+			font-size: 1.2em;
+		}
+		.stats--icon {
+			font-size: 1.5em;
+		}
+	}
+}
